# 30122-project-redistricting-redux

./: .gitignore  2018_geoderping.py  README.md  determine_statewide_winner.py  draw_random_maps.py  geoderping_2018.py  load_state_data.py  matt_attempts_gis.py  plotting_maps.py  pyproject.toml  seedhunter.py  stats.py
.ipynb_checkpoints/: field-conversion-guide-checkpoint.txt
UNUSED_FILES/: draw_recursive_maps.py  field-conversion-guide.txt
UNUSED_FILES/ga_2020/: ga_2020.sbn
ga_cong_adopted_2021/: CONGRESS-PROP1-2021-shape.shx
merged_shps/: GA_2020_neighbors.csv  GA_VTD_merged.shx
metrics/: proportionality.py
rdh_2020/: dummy.txt  join_data_to_shp.py  rdh_api.py
rdh_ga_2020/: join_data_to_shp.py  rdh_api.py
redistricting_redux/: __main__.py  app.py  draw_random_maps.py  ethan_balance.py  load_state_data.py  proportionality.py  regression.py  stats.py  test_draw_for_ethan3.csv
redistricting_redux/UNUSED_FILES/: 0215-119am-error-output.txt  determine_statewide_winner.py  draw_chaos_maps.py  keyerror-message-02222.py  mapwide_popswap_2.py  notes_ethan.ipynb  plot_redblue_precinct.py  recursive_call_check.py  seedhunter.py  set_neighbor_district_set.py  startup_2018.py  test_draw_for_ethan.csv  test_draw_for_ethan2.csv  unused_stats.py
redistricting_redux/merged_shps/: AZ_2020_neighbors.csv  AZ_VTD_merged.dbf  AZ_VTD_merged.shx  GA_VTD_merged.dbf  GA_VTD_merged.shx  IL_2020_neighbors.csv  IL_VTD_merged.shx  NC_2020_neighbors.csv  NC_VTD_merged.shx  (+7 more)
test_dfs/: ga_2018_neighbors.csv  ga_testdf_0222-200239.geojson  ga_testdf_0222-200759.dbf
(+10 files in other folders)
