[tool.poetry]
name = "redistricting-redux"
version = "0.1.0"
description = ""
authors = ["Matthew Jackson <mbjackson@uchicago.edu>, Sarik Goyal <sarikg@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1,<4"
pandas = "^1.5.3"
ipython = "^8.8.0"
jellyfish = "^0.9.0"
geopandas = "^0.12.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"