[tool.poetry]
name = "redistricting-redux"
version = "0.1.0"
description = ""
authors = ["Matthew Jackson <mbjackson@uchicago.edu>, Sarik Goyal <sarikg@uchicago.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1,<4"
pandas = "^1.3.1"
ipython = "^8.8.0"
jellyfish = "^0.6.1"
geopandas = "^0.12.2"
matplotlib = "^3.6.3"
census = "^0.8.19"
us = "^2.0.2"
requests = "^2.25.1"
numpy = "^1.20.3"
sklearn = "^1.2.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^22.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"